[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqm"
version = "0.1.0"
description = "AI agent orchestration framework — build, share, and run YAML pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "rich>=13.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["aqm", "schema"]

[project.scripts]
aqm = "aqm.cli:cli"
