[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aqm"
version = "1.2.17"
description = "AI agent orchestration framework — build, share, and run YAML pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "aqm-framework", email = "aqm@aqm.dev" },
]
keywords = ["ai", "agent", "orchestration", "pipeline", "yaml", "claude", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "jinja2>=3.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "rich>=13.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.urls]
Homepage = "https://github.com/aqm-framework/aqm"
Repository = "https://github.com/aqm-framework/aqm"
Documentation = "https://github.com/aqm-framework/aqm/blob/main/docs/spec.md"
Issues = "https://github.com/aqm-framework/aqm/issues"

[tool.hatch.build.targets.wheel]
packages = ["aqm"]
artifacts = ["aqm/schema/*.json"]

[tool.hatch.build.targets.sdist]
include = ["aqm/", "schema/", "docs/", "README.md", "LICENSE", "pyproject.toml"]

[project.scripts]
aqm = "aqm.cli:cli"
